Approval for general requision done

--- a/NBL/Areas/SCM/Views/Shared/_MenuSCMManagerPartialPage.cshtml
+++ b/NBL/Areas/SCM/Views/Shared/_MenuSCMManagerPartialPage.cshtml
@@ -33,6 +33,20 @@
     </li>
     <li class="treeview">
         <a href="#">
+            <i class="fa fa-shopping-cart"></i>
+            <span>General Requisitions</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+            </span>
+        </a>
+        <ul class="treeview-menu">
+            <li>@Html.ActionLink(" Pending Requisitions", "PendingGeneralRequisitions", "Order", new { area = "SCM" }, new { @class = "fa fa-list", style = "font-weight: bolder" })</li>
+           
+        </ul>
+    </li>
+
+    <li class="treeview">
+        <a href="#">
             <i class="fa fa-product-hunt"></i>
             <span>Store</span>
             <span class="pull-right-container">
