Code added for General Requisition Delivery

--- a/NBL/Areas/Sales/Views/Shared/_ViewGeneralRequisitionDetailsPartialPage.cshtml
+++ b/NBL/Areas/Sales/Views/Shared/_ViewGeneralRequisitionDetailsPartialPage.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model IEnumerable<NBL.Models.ViewModels.Requisitions.ViewGeneralRequistionDetailsModel> 
 <table id="table_deliverable_product_List" class="display" style="border:1px solid black">
-    <caption class="text-center text-green" style="font-weight:bolder;font-size:20px">Orderd Product List</caption>
+    <caption class="text-center text-green" style="font-weight:bolder;font-size:20px">Requisition Product List</caption>
 
     <thead>
     <tr>
