--- a/NBL/Views/Shared/_ViewGeneralRequisitionList.cshtml
+++ b/NBL/Views/Shared/_ViewGeneralRequisitionList.cshtml
@@ -11,8 +11,8 @@
                 <tr>
                     <th>Reference</th>
                     <th>Requisition By</th>
-                    <th>Quantity</th>
-                    <th>Requisiton Date</th>
+                    <th class="text-center">Quantity</th>
+                    <th class="text-center">Requisiton Date</th>
                     <th class="text-center">Action</th>
                 </tr>
             </thead>
@@ -22,8 +22,8 @@
                     <tr>
                         <td>@item.RequisitionRef</td>
                         <td>@item.RequisitionByEmp</td>
-                        <td>@item.Quantity</td>
-                        <td>@item.RequisitionDate.ToString("dd-MMMM-yyyy")</td>
+                        <td class="text-right">@item.Quantity</td>
+                        <td class="text-center">@item.RequisitionDate.ToString("dd-MMMM-yyyy")</td>
                         <td class="text-center">
                             @Html.ActionLink(" Delivery", "Delivery", "Requisition", new { area = "Sales", id = item.RequisitionId }, new { @class = "fa fa-eye" })
                         </td>
@@ -35,9 +35,8 @@
                 <tr>
                     <th>Reference</th>
                     <th>Requisition By</th>
-                    <th>Quantity</th>
-                    <th>Requisiton Date</th>
-                  
+                    <th class="text-center">Quantity</th>
+                    <th class="text-center">Requisiton Date</th>
                     <th class="text-center">Action</th>
                 </tr>
             </tfoot>
