--- a/NBL/Views/Shared/_ViewScannedBarCodePartialPage.cshtml
+++ b/NBL/Views/Shared/_ViewScannedBarCodePartialPage.cshtml
@@ -6,7 +6,7 @@
 
 <section class="content">
     <h3 class="text-center text-green">Scanned Barcode List</h3>
-    <div>
+    <div style="border: 1px solid">
 
         @foreach (var item in Model)
         {
