--- a/NBL/Areas/SuperAdmin/Views/Home/AddUser.cshtml
+++ b/NBL/Areas/SuperAdmin/Views/Home/AddUser.cshtml
@@ -90,7 +90,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-3 col-md-9">
-                        @Html.ActionLink("Cancel", "ViewUser", "Assign", new { area = "SuperAdmin" }, new { @class = "btn btn-danger" })
+                        @Html.ActionLink("Back", "ViewUser", "Assign", new { area = "SuperAdmin" }, new { @class = "btn btn-danger" })
                         <input type="submit" value="Add User" class="btn btn-success" id="AddButton" />
                     </div>
                 </div>
@@ -118,7 +118,7 @@
         $("#EmployeeName").autocomplete({
             source: function (request, response) {
                 $.ajax({
-                    url :'@Url.Action("EmployeeAutoComplete","Home",new {area="SuperAdmin"})',
+                    url :'@Url.Action("EmployeeAutoComplete","Common",new {area=""})',
                     data: "{ 'prefix': '" + request.term + "'}",
                     dataType: "json",
                     type: "POST",
@@ -146,7 +146,7 @@
                 $.ajax({
 
                     type: "POST",
-                   url:'@Url.Action("GetEmployeeById", "Home", new { area = "SuperAdmin" })',
+                   url:'@Url.Action("GetEmployeeById", "Common", new { area = "" })',
                    // url: RootUrl + 'sales/Order/GetClientById/',
                     contentType: "application/json; charset=utf-8",
                     data: JSON.stringify(json),
