--- a/NBL/Areas/Sales/Views/Requisition/Delivery.cshtml
+++ b/NBL/Areas/Sales/Views/Requisition/Delivery.cshtml
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-md-6" style="margin:0;padding:0;">
                     <section>
-                        <strong> Requisition By:</strong>
+                        <strong> Requisition Ref:</strong>
                         @Model.GeneralRequisitionModel.RequisitionRef<br/>
                         <strong> Date :</strong> @Model.GeneralRequisitionModel.LastApproveDateTime.ToString("D")<br/>
 
