--- a/NBL/Views/Shared/_ViewGeneralRequisitionListPartialPage.cshtml
+++ b/NBL/Views/Shared/_ViewGeneralRequisitionListPartialPage.cshtml
@@ -75,10 +75,10 @@
                     {
                         <i class="fa fa-spinner"> Approved By SCM</i>
                     }
-                    else
+                    else if(item.Status==2)
                     {
                                                 <i class="fa fa-check-circle-o"> Delivered</i>
-                                            }
+                     }
                     </td>
                     <td class="text-center">
                         @if(User.IsInRole("SCMManager"))
